Fixed featured image overflow on mobile

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -105,6 +105,7 @@ main {
 }
 
 #featured-image {
+    max-width: 100%;
     border: 1px solid #ccc;
     border-radius: 3px;
 }
